[package]
name = "redox_dmi"
version = "0.1.5"
edition = "2018"
description = "DMI table parser"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/dmi"

[lib]
name = "dmi"

[dependencies]
plain = "0.2.3"

[features]
default = []
std = []
